# ChangeLog for dev-libs/cyrus-sasl
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.192 2008/03/15 22:36:36 dertobi123 Exp $

  15 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -cyrus-sasl-2.1.22.ebuild, -cyrus-sasl-2.1.22-r1.ebuild:
  Drop old versions and therefore revert the mips stable keyword as per
  #209999

  28 Oct 2007; Torsten Veller <tove@gentoo.org>
  +files/cyrus-sasl-2.1.22-db4.patch, cyrus-sasl-2.1.22-r2.ebuild:
  Support latest sys-libs/db versions. Thanks Tuan Van in #192753.

  19 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild:
  alpha stable wrt #169512

  03 May 2007; Andrej Kacian <ticho@gentoo.org> cyrus-sasl-2.1.22-r2.ebuild:
  Require libpq instead of posgresql for postgres USE flag.

  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild:
  stable amd64, bug 169512

  07 Apr 2007; Luca Longinotti <chtekk@gentoo.org>
  files/saslauthd-2.1.21.conf, files/saslauthd2.rc6, files/pwcheck.rc6,
  metadata.xml, cyrus-sasl-2.1.22-r2.ebuild:
  General ebuild cleanup (comments/style). Fix issue in comment #3 of bug
  #134437.

  12 Mar 2007; Jeroen Roovers <jer@gentoo.org> cyrus-sasl-2.1.22-r2.ebuild:
  Stable for HPPA (bug #169512).

  12 Mar 2007; Markus Rothe <corsair@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild:
  Stable on ppc64; bug #169512

  08 Mar 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild:
  Stable on ppc wrt bug #169512.

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> ChangeLog:
  Fix manifest

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild:
  Stable on sparc wrt #169512

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild:
  stable x86; bug 169512

  07 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  cyrus-sasl-2.1.22-r2.ebuild: