@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/cyrus-sasl-2.1.22-r2.ebuild,v 1.14 2007/10/28 21:49:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/cyrus-sasl-2.1.22-r2.ebuild,v 1.15 2008/05/19 19:38:42 dev-zero Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,7 @@ inherit eutils flag-o-matic multilib autotools pam java-pkg-opt-2
 ntlm_patch="${P}-ntlm_impl-spnego.patch.gz"
 SASLAUTHD_CONF_VER="2.1.21"
 
-KEYWORDS="~amd64-linux ~ia64-linux ~mips-linux ~x86-linux ~ppc-macos ~x86-macos"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 
 DESCRIPTION="The Cyrus SASL (Simple Authentication and Security Layer)."
 HOMEPAGE="http://asg.web.cmu.edu/sasl/"
@@ -31,7 +31,7 @@ RDEPEND="authdaemond? ( || ( >=net-mail/courier-imap-3.0.7 >=mail-mta/courier-0.
 		mysql? ( virtual/mysql )
 		ntlm_unsupported_patch? ( >=net-fs/samba-3.0.9 )
 		pam? ( virtual/pam )
-		postgres? ( >=dev-db/libpq-7.2 )
+		postgres? ( >=virtual/postgresql-base-7.2 )
 		ssl? ( >=dev-libs/openssl-0.9.6d )"
 DEPEND="${RDEPEND}
 		>=sys-apps/sed-4
