@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/cyrus-sasl
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.192 2008/03/15 22:36:36 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.193 2008/05/19 19:38:42 dev-zero Exp $
+
+  19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
+  cyrus-sasl-2.1.22-r2.ebuild:
+  Changed dependency for postgresql to virtual/postgresql-base
 
   15 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   -cyrus-sasl-2.1.22.ebuild, -cyrus-sasl-2.1.22-r1.ebuild:
